@@ -1,6 +1,8 @@
 1.2.1  (CURRENT DEV RELEASE)
-- Added public method 'getData' that returns the valiue of a named config option.
+- Added public method 'getData' that returns the value of a named config option.
 - Added public method 'clear' that clears all calendar events from the calendar.
+- Updated scroll to hour to delay to fix a timing issue
+- Added eventDrag callback
 
 2009-06-19 - 1.2 
 - Added better layout support for overlapping of events
